--- a/src/main/webapp/META-INF/maven/com.mohe/basic/pom.xml
+++ b/src/main/webapp/META-INF/maven/com.mohe/basic/pom.xml
@@ -219,6 +219,11 @@
 		    <artifactId>jackson-dataformat-xml</artifactId>
 		    <version>2.9.4</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.5.0-b01</version>
+		</dependency>
 		
 	</dependencies>
 	<build>
